fix(styles): Add subtle color changes, switch dark mode color

--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -14,20 +14,18 @@ $color-primary: #4040ff;
 $color-fg: #222;
 $color-heading: #000;
 $color-bg: #fff;
-$color-footer-bg: #e5e5e5;
-$color-footer-border: #ccc;
+$color-footer-bg: #f5f5f5;
 $color-footer-fg: #444;
 $color-input-bg: #eee;
 $color-input-border: #ddd;
 $color-light-grey: #ddd;
 
-$color-fg-dark: #eee;
+$color-fg-dark: #ccc;
 $color-footer-bg-dark: #000;
 $color-heading-dark: #fff;
 $color-bg-dark: #111;
-$color-footer-border-dark: #222;
 $color-footer-fg-dark: #aaa;
 $color-input-bg-dark: #222;
-$color-input-border-dark: #444;
-$color-primary-dark: invert($color-primary);
+$color-input-border-dark: #333;
+$color-primary-dark: #ffb600;
 $color-light-grey-dark: #666;
